- fixed chatbox, should be all good to go - refactored and edited app.css and signInPage.css as they were containing overlapping properties - Cleaned up App.css to get rid of useless declarations

--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,6 @@ body {
   width: 100%
 }
 
-.logo {
-  position: relative;
-  top: -20px;
-  height: 75px;
-  width: 75px;
-}
-
 .App {
   text-align: center;
   max-width: 728px;
@@ -64,44 +57,8 @@ main::-webkit-scrollbar-thumb {
   background: #6649b8;
 }
 
-form {
-  height: 10vh;
-  position: fixed;
-  bottom: 0;
-  background-color: rgb(24, 23, 23);
-  width: 100%;
-  max-width: 728px;
-  display: flex;
-  font-size: 1.5rem;
-}
-
-form button {
-  width: 20%;
-  background-color: rgb(56, 56, 143);
-}
-
-
-input {
-  line-height: 1.5;
-  width: 100%;
-  font-size: 1.5rem;
-  background: rgb(58, 58, 58);
-  color: white;
-  outline: none;
-  border: none;
-  padding: 0 10px;
-}
-
-button {
-  background-color: #282c34; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  cursor: pointer;
-  font-size: 1.25rem;
+.inputBox {
+    width: 100%;
 }
 
 button:disabled {
@@ -109,9 +66,6 @@ button:disabled {
   cursor: not-allowed;
 }
 
-#login:hover {
-  cursor: pointer;
-}
 ul, li {
   text-align: left;
   list-style: none;
@@ -133,7 +87,6 @@ p {
   align-items: center;
 }
 
-
 .sent {
   flex-direction: row-reverse;
 }
@@ -143,14 +96,8 @@ p {
   background: #0b93f6;
   align-self: flex-end;
 }
+
 .received p {
   background: #e5e5ea;
   color: black;
-}
-
-img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin: 2px 5px;
 }
