--- a/src/pages/signInPage.css
+++ b/src/pages/signInPage.css
@@ -23,33 +23,46 @@
 }
 
 /* Styles for input fields */
-.inputBox {
+.userInput {
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
     width: 300px;
+
+    font-size: 1.5rem;
+    background: rgb(58, 58, 58);
+    color: white;
+    outline: none;
+    line-height: 1.5;
 }
 
-/* Style for the login button */
-#login {
-    padding: 10px 20px;
-    background-color: #4285f4;
+button {
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.25rem;
+}
+
+button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+/* Style for the default login button */
+#login {
+    background-color: #4285f4;
     margin-bottom: 10px;
 }
 
 /* Style for the Google sign-in button */
 #sign-in {
-    padding: 10px 20px;
     background-color: #db4437;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
 }
 
 /* Style for the sign-out button */
@@ -62,9 +75,9 @@
     cursor: pointer;
 }
 
-.logo {
+#logo {
     position: relative;
     top: -20px;
     height: 75px;
     width: 75px;
-  }
+}
